# isoland-studio

./: .dockerignore  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: README.md
backend/: package-lock.json  package.json
backend/src/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
