[package]
name = "isoland-studio"
version = "0.1.0"
description = "Isoland Studio"
authors = ["mathusalim"]
edition = "2021"

[lib]
name = "isoland_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

